// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextToast /> snapshot should match snapshot 1`] = `
<TextToast
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
  >
    <Text
      className="md-text-toast-text"
      type="body-secondary"
    >
      <small
        className="md-text-wrapper md-text-toast-text"
        data-type="body-secondary"
      >
        Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
      </small>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with className 1`] = `
<TextToast
  className="example-class"
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="example-class md-text-toast-wrapper"
    data-text-alignment="center"
  >
    <Text
      className="example-class md-text-toast-text"
      type="body-secondary"
    >
      <small
        className="md-text-wrapper example-class md-text-toast-text"
        data-type="body-secondary"
      >
        Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
      </small>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with icon 1`] = `
<TextToast
  iconProps={
    Object {
      "name": "noise-removal",
    }
  }
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
  >
    <Icon
      name="noise-removal"
    >
      <div
        className="md-icon-wrapper"
      >
        <svg
          className=""
          data-autoscale={false}
          data-scale={32}
          data-test="noise-removal"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
    <Text
      className="md-text-toast-text"
      type="body-secondary"
    >
      <small
        className="md-text-wrapper md-text-toast-text"
        data-type="body-secondary"
      >
        Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
      </small>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with id 1`] = `
<TextToast
  id="example-id"
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
    id="example-id"
  >
    <Text
      className="md-text-toast-text"
      type="body-secondary"
    >
      <small
        className="md-text-wrapper md-text-toast-text"
        data-type="body-secondary"
      >
        Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
      </small>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with style 1`] = `
<TextToast
  style={
    Object {
      "color": "pink",
    }
  }
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <Text
      className="md-text-toast-text"
      type="body-secondary"
    >
      <small
        className="md-text-wrapper md-text-toast-text"
        data-type="body-secondary"
      >
        Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
      </small>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with textAlignment \`left\` 1`] = `
<TextToast
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
  textAlignment="left"
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="left"
  >
    <Text
      className="md-text-toast-text"
      type="body-secondary"
    >
      <small
        className="md-text-wrapper md-text-toast-text"
        data-type="body-secondary"
      >
        Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
      </small>
    </Text>
  </div>
</TextToast>
`;
